오늘할일추가

--- a/practice.tex
+++ b/practice.tex
@@ -380,7 +380,7 @@ Footnotes\footnote{This is a footnote.} are often used by people using \LaTeX.
 \multirow{3}{\newlength\LL\settowidth\LL{10}}{$\Gamma_{xx}$}
          & 2nd order & 2.067e-3 & 5.172e-4 & 1.293e-4 & 3.233e-5 & 8.083e-6 & 2.021e-6\\
          & 4th order & 1.355e-3 & 3.387e-4 & 8.468e-5 & 2.117e-5 & 5.292e-6 & 1.323e-6\\
-         & 6th order & 1.354e-3 & 3.387e-4 & 8.467e-5 & 2.117e-5 & 5.292e-6 & 1.323e-6\\
+         & 6th order & 1.352e-3 & 3.387e-4 & 8.467e-5 & 2.117e-5 & 5.292e-6 & 1.323e-6\\
     \midrule
     \multirow{3}[\newlength\LL\settowidth\LL{10}]{$\Gamma_{xy}$}
          & 2nd order & 1.628e-3 & 4.075e-4 & 1.019e-4 & 2.548e-5 & 6.369e-6 & 1.592e-6\\
@@ -393,7 +393,9 @@ Footnotes\footnote{This is a footnote.} are often used by people using \LaTeX.
 
 \multirow{3}{\newlength\LL\settowidth\LL{10}}{$\Gamma_{xy}$}
 
-
+오늘 해야 할 일은 latex 문서 3개를 작성하는 것이다
+그리고 git으로 commit해서 보고하는 것이다
+...
 
 
 \end{document}
