english essay done

--- a/English_essay_mask.tex
+++ b/English_essay_mask.tex
@@ -14,7 +14,7 @@
  People worries they could caught in covid19. In korea, more than 300 thousands people have caught in a day. The government announced that people should wear their masks and obey the rules to prevent being infected. However, some people doubt the effectiveness of wearing mask or even prevention the government suggests. Needless to say, I strongly agree people should wear their masks on wherever they are. \\
 
 \section{Body 1}
- Comparing South Korea and other countries,  It is true that some western countries discard their prevention and let people freely walk around. There are millions of self-ownership in Korea who still suffer from the government' strict restrictions. Although vaccination has some effect on preventing covid19 or severe danger, it is not common sense that South Korea have both high vaccination rate and more infections per day than any other countries in the world. Most of citizen experienced inconvenience because of the government's rules. People could not meet their friends or even their families. Many people lost their jobs. Wearing masks just delay the end of pandemic and we suffer more time due to prevention policy.
+ Comparing South Korea and other countries,  It is true that some western countries discard their prevention and let people freely walk around. There are millions of self-ownership in Korea who still suffer from the government' strict restrictions. Although vaccination has some effect on preventing covid19 or severe danger, it is not common sense that South Korea have both high vaccination rate and more infections per day than any other countries in the world. Most of citizen experienced inconvenience because of the government's rules. People could not meet their friends or even their families. Many people lost their jobs. Wearing masks just delay the end of pandemic and we suffer more time due to prevention policy. So Masks should no longer be required in schools, restaurants and bars, gyms and movie theaters. 
 
 \section{Body 2}
 people might say "wearing masks and vaccinating delay the end of pandemic". Still, it is true that wearing masks is basic prevention policy which effectively restrict the expansion of plague. When an infected person exhales, talks, coughs or sneezes, the virus spreads through the air. When we meet covid19 virus, the virus penetrates into our respiratory system. The virus first meets our nose or mouth, then it goes into our body through trachea. Next, the virus goes into our lungs which are not identical. When virus penetrates into our lungs or sections of lungs which called 'lungs'. When virus stitches to pleura, it can cause more severe disease such as pneumonia. Wearing mask is the simplest way to prevent virus dives into our lungs. Masks protect us from a spray, sneeze which can infectious.
@@ -28,6 +28,85 @@ pneumonia: a serious illness in which one or both lungs become red and swollen a
 trachea: the tube that carries air from your throat to your lungs\\
 membrane: a thin piece of skin that covers or connects parts of a person's or animal's body\\
 pleura: a thin membrane covering each lung that folds back to make a lining for the chest cavity.\\
-argument for and against
+argument for and against\\
+
+\section{words: How do your body parts work?}
+
+\subsection{heart}
+stethoscope: a piece of medical equipment that doctors use to listen to your heart and lungs
+tricuspid valve: the valve (= structure that opens and closes) in the heart that stops blood from returning into the right atrium (= upper space) from the right ventricle (= lower space)\\
+ventricle: either of two small, hollow spaces, one in each side of the heart, that force blood into the tubes leading from the heart to the other parts of the body\\
+pulmonary: relating to the lungs (= organs used for breathing)\\
+mitral valve: the valve (= a structure that opens and closes) in the heart that stops blood from returning into the left atrium (= upper space) from the left ventricle (= lower space)\\
+
+\subsection{brain}
+cerebrum: the front part of the brain, that is involved with thought, decision, emotion, and character\\
+cerebellum: a large part at the back of the brain that controls your muscles, movement, and balance\\
+amygdala: one of two parts of the brain that affect how people feel emotions, especially fear and pleasure\\
+
+\subsection{skin}
+epidermis: the thin outer layer of the skin\\
+dermis: the thick layer of skin under the epidermis (= thin outer layer) that contains blood vessels, sweat glands and nerve endings\\
+sweat gland: one of the small organs under the skin that produce sweat\\
+hypodermis: the innermost (or deepest) and thickest layer of skin. It is also known as the subcutaneous layer or subcutaneous tissue\\
+follicle: any of the very small holes in the skin, especially one that a hair grows from\\
+pore: a very small hole in the skin of people or other animals, or a similar hole on the surface of plants or rocks\\
+subcutaneous tissue: The subcutaneous tissue, also known as the hypodermis, is the innermost (deepest) layer of skin. It is made up of fat and connective tissue and helps the body control temperature.\\
+
+
+\subsection{urinary system}
+ureter: a tube on each side of the body that takes urine from the kidney to the bladder\\
+bladder: an organ like a bag inside the body of a person or animal, where urine is stored before it leaves the body\\
+
+\subsection{nose}
+nostrils: either of the two openings in the nose through which air moves when you breathe\\
+wiggly: shaped like a line with many curves\\
+septum: a thin part dividing tissues or spaces in an organ such as the nose or heart\\
+cartilage: (a piece of) a type of strong tissue found in humans in the joints (= places where two bones are connected) and other places such as the nose, throat, and ears\\
+nasal cavity: a hole, or an empty space between two surfaces related to the nose \\
+mucous: relating to mucus (= a slippery lubricant and protective substance)\\
+mucus: a thick liquid produced inside the nose and other parts of the body\\
+snot: mucus produced in the nose \\
+booger: a piece of dried mucus from inside the nose \\
+olfactory: connected with the ability to smell \\
+epithelium: a layer of cells covering all the surfaces of the body except the interior of blood and lymph vessels\\
+anosmia: the condition of having no sense of smell or being unable to smell certain things\\
+inflammation: a red, painful, and often swollen area in or on a part of your body\\
+mucosa: the thin skin that covers the inside surface of parts of the body such as the nose and mouth and produces mucus to protect them\\
+
+\subsection{hair}
+shaft: the part of the hair above the scalp\\
+hilarious: extremely funny and causing a lot of laughter\\
+
+\subsection{nails}
+cuticle: the thin skin at the base of the nails on the fingers and toes\\
+keratin: a strong natural protein, which is the main substance that forms hair, nails, hooves, horns, feathers, etc \\
+lunula: The lunula, or lunulae (pl.) from Latin 'moon - lunar', is the crescent-shaped whitish area of the bed of a fingernail or toenail. \\
+
+
+\subsection{auditory system}
+pinna(auricle): the part of the ear on the outside of the head. one of the two spaces in the top part of the heart that receive blood from the veins and push it down into the ventricles (= lower spaces) \\
+ossicle: a small bone or structure that is similar to a bone \\
+anvil(incus) : The incus, also known as the “anvil,” is the middle of three small bones in the middle ear. The incus transmits vibrations from the malleus to the stapes \\
+stirrup: The stapes or stirrup is a bone in the middle ear of humans and other animals which is involved in the conduction of sound vibrations to the inner ear \\
+cochlea: a twisted tube inside the inner ear that is the main organ of hearing\\
+
+\subsection{teeth}
+primary teeth: same as baby teeth, milk teeth\\
+teethe: If a baby or small child is teething, their first teeth are growing, usually causing pain \\
+incisors: one of the sharp teeth at the front of the mouth that cut food when you bite into it \\
+premolar(bicuspid): one of the two teeth immediately in front of the molars on both sides of the upper and lower jaws of humans and some other animals, used for grinding and chewing food (= crushing it with the teeth) \\
+canine teeth: one of four pointed teeth in the human mouth\\
+molars: one of the large teeth at the back of the mouth in humans and some other animals used for crushing and chewing food \\
+wisdom tooth: one of the four teeth at the back of the jaw that are the last to grow\\
+
+\subsection{tongue}
+esophagus(oesophagus): the tube in the body that takes food from the mouth to the stomach\\
+papilla(pl. papillae): a small, round raised structure at the base of hair or teeth, or on the tongue, where it is involved in taste \\
+taste bud: any of a large group of cells found mostly on the tongue that allow different tastes to be recognized \\
+saliva: the liquid produced in your mouth to keep the mouth wet and to help to prepare food to be digested \\
+
+\subsection{muscle}
+cytokine: a small protein produced by cells in the nervous and immune systems that affects what happens between cells \\
 
 \end{document}
